infra/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - grafana.picluster.xyz
    secretName: grafana-tls
  rules:
  - host: grafana.picluster.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: loki-grafana
              port:
                number: 80
